--- a/templates/index.html
+++ b/templates/index.html
@@ -915,5 +915,11 @@
             observer.observe(card);
         });
     </script>
+       <script 
+        src="https://jobfolio.pro/static/js/jobfolio-tracker.js"
+        data-jobfolio-tracker
+        data-api-url="https://job-folio.vercel.app"
+        data-debug="false">
+    </script>
 </body>
 </html>
