--- a/templates/index.html
+++ b/templates/index.html
@@ -839,7 +839,7 @@
                 </div>
                 <div class="border-t border-gray-800 pt-8">
                     <p class="text-gray-400 text-sm">
-                         <p>© 2025 Walid Boughalem - Portfolio BTS NDRC</p>
+                         <p>© 2025 Manuella GBEDAN - Portfolio BTS NDRC</p>
                          <a href="https://jobfolio.pro" target="_blank" class="text-blue-400 hover:text-blue-300 transition-colors font-semibold ml-2">
                            JobFolio
                          </a>. Tous droits réservés.
